Code cleanup from GEDI migration

--- a/src/test/resources/disk-store-server1.properties
+++ b/src/test/resources/disk-store-server1.properties
@@ -2,7 +2,7 @@
 # GemFire properties
 log-level=error
 
-log-file=/Projects/solutions/Global/dev/Solutions.Grid/Solutions.GEDI.GemFire/runtime/gemfire/logs/server-1.log
+log-file=runtime/gemfire/logs/server-1.log
 
 #locators=localhost[40404]'
 locators=localhost[10680]
